syntax = "proto3";

package pb;

import "barber/barber_roles.proto";

option go_package = "barbershop/src/pb/barber";


message UpdateBarberRolesRequest{
    string id = 1;
    int32 role_id = 2;
}

message UpdateBarberRolesResponse {
    BarberRoles barber_role = 1;
}